sass/forums: Fix whitespace handling issues with the phpBB 3.2 text parser
The new parser produces better markup at the cost of breaking existing
bbCode that relied on the gratuituous linebreaks and whitespace
write better templates and CSS too.

This in particular fixes missing margins around the release announcement
blocks, as well as a missing space preceding the expandable block status
chevron.

--- a/wesmere/sass/forums.scss
+++ b/wesmere/sass/forums.scss
@@ -172,7 +172,7 @@ body {
 .ra-section,
 .ra-warn,
 .ra-issue {
-	margin-left: 1em;
+	margin: 1em 0 1em 1em;
 	border: 1px dashed #bbb;
 }
 
@@ -187,6 +187,10 @@ body {
 	font-weight: bold;
 	font-size: 106%;
 	padding: 0.4em;
+}
+
+.ra-chevron::before {
+	content: "\A0";
 }
 
 .ra-warn {
